[gd_scene load_steps=26 format=3 uid="uid://c0h5bevr7m6at"]

[ext_resource type="Script" uid="uid://du3idm3ms8uls" path="res://scenes/Audio Manager/audio_manager.gd" id="1_th668"]
[ext_resource type="AudioStream" uid="uid://cu2hcs73oivmy" path="res://audio/sfx/BugSmallDie.wav" id="2_di7gk"]
[ext_resource type="AudioStream" uid="uid://6a1lk7qduij0" path="res://audio/sfx/BugHumanoidDie.wav" id="3_u1kl0"]
[ext_resource type="AudioStream" uid="uid://ct0ws3v2b8gc6" path="res://audio/sfx/BugLargeDie.wav" id="4_53vou"]
[ext_resource type="AudioStream" uid="uid://s0ipw21vbwyt" path="res://audio/sfx/EnemyHurt_A.wav" id="5_53vou"]
[ext_resource type="AudioStream" uid="uid://ynrbvbpcslyv" path="res://audio/sfx/EnemyHurt_B.wav" id="6_t2fqo"]
[ext_resource type="AudioStream" uid="uid://c26rgo7njbarq" path="res://audio/music/Defeat.wav" id="7_5a0sd"]
[ext_resource type="AudioStream" uid="uid://dnuc1kab57s8k" path="res://audio/sfx/GemCollect.wav" id="7_ne6yq"]
[ext_resource type="AudioStream" uid="uid://db8mv32c6i2ql" path="res://audio/music/Victory.wav" id="8_2m2tg"]
[ext_resource type="AudioStream" uid="uid://sgfnmam2ak1n" path="res://audio/sfx/GemDrop.wav" id="8_sxpqy"]
[ext_resource type="AudioStream" uid="uid://dnb7p4e0ef6co" path="res://audio/music/Wreckage Machinery - Long Gone.mp3" id="9_tw5x4"]
[ext_resource type="AudioStream" uid="uid://yxqx4ip7pkkr" path="res://audio/sfx/PlayerHurt_A.wav" id="9_u4mrk"]
[ext_resource type="AudioStream" uid="uid://v3bs0widi6qg" path="res://audio/sfx/PlayerHurt_B.wav" id="10_i37gu"]
[ext_resource type="AudioStream" uid="uid://dmhsv40idwipg" path="res://audio/sfx/PlayerHurt_C.wav" id="11_gufja"]
[ext_resource type="AudioStream" uid="uid://bcq2w5dgb5h2" path="res://audio/sfx/PlayerHurt_D.wav" id="12_o7vmc"]
[ext_resource type="AudioStream" uid="uid://c5vos5rj8ygjw" path="res://audio/sfx/PlayerHurt_E.wav" id="13_bsslw"]
[ext_resource type="AudioStream" uid="uid://xx2vmmowphpp" path="res://audio/sfx/Projectile_A.wav" id="14_d6sch"]
[ext_resource type="AudioStream" uid="uid://1lu2bntpblbi" path="res://audio/sfx/Projectile_B.wav" id="15_5xvwe"]
[ext_resource type="AudioStream" uid="uid://chw26ufg7nfuh" path="res://audio/sfx/Projectile_C.wav" id="16_ua6oc"]
[ext_resource type="AudioStream" uid="uid://dq3iasmxnqbvu" path="res://audio/sfx/Projectile_D.wav" id="17_lljys"]
[ext_resource type="AudioStream" uid="uid://x68fpgd1y884" path="res://audio/sfx/Shockwave.wav" id="18_vokip"]
[ext_resource type="AudioStream" uid="uid://bj5dcbmn15xq4" path="res://audio/sfx/UpgradeAcquired.wav" id="19_uu38c"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ocl70"]
streams_count = 2
stream_0/stream = ExtResource("5_53vou")
stream_1/stream = ExtResource("6_t2fqo")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1n5lx"]
streams_count = 5
stream_0/stream = ExtResource("9_u4mrk")
stream_1/stream = ExtResource("10_i37gu")
stream_2/stream = ExtResource("11_gufja")
stream_3/stream = ExtResource("12_o7vmc")
stream_4/stream = ExtResource("13_bsslw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jhqse"]
streams_count = 4
stream_0/stream = ExtResource("14_d6sch")
stream_1/stream = ExtResource("15_5xvwe")
stream_2/stream = ExtResource("16_ua6oc")
stream_3/stream = ExtResource("17_lljys")

[node name="AudioManager" type="Node"]
script = ExtResource("1_th668")

[node name="SFXPlayers" type="Node" parent="."]

[node name="BugSmallDie" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("2_di7gk")
max_polyphony = 8

[node name="BugHumanoidDie" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("3_u1kl0")
max_polyphony = 8

[node name="BugLargeDie" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("4_53vou")
max_polyphony = 8

[node name="EnemyHurt" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = SubResource("AudioStreamRandomizer_ocl70")
max_polyphony = 32

[node name="GemCollect" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("7_ne6yq")
max_polyphony = 8

[node name="GemDrop" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("8_sxpqy")
max_polyphony = 8

[node name="PlayerHurt" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = SubResource("AudioStreamRandomizer_1n5lx")

[node name="Projectile" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = SubResource("AudioStreamRandomizer_jhqse")
max_polyphony = 16

[node name="Shockwave" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("18_vokip")

[node name="UpgradeAcquired" type="AudioStreamPlayer" parent="SFXPlayers"]
stream = ExtResource("19_uu38c")

[node name="MusicPlayers" type="Node" parent="."]

[node name="Defeat" type="AudioStreamPlayer" parent="MusicPlayers"]
stream = ExtResource("7_5a0sd")

[node name="Victory" type="AudioStreamPlayer" parent="MusicPlayers"]
stream = ExtResource("8_2m2tg")

[node name="SoundTrack" type="AudioStreamPlayer" parent="MusicPlayers"]
stream = ExtResource("9_tw5x4")
volume_db = -5.0
playback_type = 1
